<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">TRANSMART</string>
    <string name="app_name">Transmart</string>
    <string name="service">Service</string>
    <string name="download">Add Downloads</string>
    <string name="downldmgr">Download Manager</string>
    <string name="home">Home</string>
    <string name="strtservice">Set Service Timer</string>
    <string name="timermin">Set Timer Minutes</string>
    <string name="locateme">Locate Me</string>
    <string name="currLoc">Location : </string>
    <string name="lat">Latitude : </string>
    <string name="lng">Longitude : </string>
    <string name="accuracy">Accuracy : </string>
    <string name="altitude">Altitude : </string>
    <string name="none">[NONE]</string>
    <string name="maps">Google Maps</string>
    <string name="locale">Nearby Places</string>
    <string name="profiler">Add Profile</string>
    <string name="refresh">Refresh</string>
    <string name="checkin_text">Checked in to </string>
    <string name="checkin_button_text">Checkin</string>
    <string name="backup_manager_key">AEdPqrEAAAAINaafOrzqzhvNSv76hEZf8nUnE8gnYiU14qkcwQ</string>

</resources>